[tool.poetry]
name = "pizzapi2"
version = "0.1.0"
description = ""
authors = ["kay"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pizzapi = "^0.0.6"
click = "^8.1.3"
fuzzywuzzy = "^0.18.0"
python-levenshtein = "^0.20.6"
attrs = "^22.1.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
